--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         </nav>
     </header>
     <!-- Main part of the site -->
-    <main class="d-flex" style="height: calc(100vh - 100px); position: relative; border: 1px solid black;">
+    <main class="d-flex" style="height: calc(100vh - 100px); position: relative;">
         <!-- Sidebar with buttons -->
         <div id="sidebar" class="d-flex flex-column flex-shrink-0  position: absolute; h-100" style="width: fit-content;">
             <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
@@ -325,22 +325,189 @@
                 </div>
             </div>
             <!-- Next classes  -->
-            <div class="container border-top border-start border-end rounded mt-3">
-                <div>
-                    <h2>Prossime classi</h2>
-                </div>
+            <div class="container border rounded my-3">
                 <div class="row">
-                    <div class="col-5 border-top ">
-                      <h5>Nome</h5>
+                    <div class="col">
+                        <h3>Prossime classi</h3>
                     </div>
-                    <div class="col border-top">
-                      <h5>Stato</h5>
+                </div>
+                <div class="row border-bottom ">
+                    <div class="col-6 col-md-4">Nome</div>
+                    <div class="col d-none d-md-block">Data Inizio</div>
+                    <div class="col d-none d-md-block">ROI</div>
+                    <div class="col">Stato</div>
+                    <div class="col">Azioni</div>
+                </div>
+                <div class="row border-top border-bottom">
+                    <div class="col d-flex align-items-center gap-2 col-6 col-md-4">
+                        <img src="./assets/img/class-avatar.jpg" style="width: 30px;" class="p-1" alt="">
+                        <span class="d-block">
+                            Classe 115
+                        </span>
                     </div>
-                    <div class="col border-top ">
-                      <h5>Azioni</h5>
+                    <div class="col d-none d-md-block mt-md-2">
+                        8 Nov 2023
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        20%
+                    </div>
+                    <div class="col mt-1 mt-md-2">
+                        <span style="background-color: var(--color-done);" class="rounded px-1 text-light">Done</span>
+                    </div>
+                    <div class="col ">
+                        <i class="fa-solid fa-pencil border rounded p-1 m-1"></i>
+                        <i class="fa-solid fa-trash border rounded p-1 m-1"></i>
+                    </div>
+                </div>
+                <div class="row border-top border-bottom">
+                    <div class="col d-flex align-items-center gap-2 col-6 col-md-4">
+                        <img src="./assets/img/class-avatar.jpg" style="width: 30px;" class="p-1" alt="">
+                        <span class="d-block">
+                            Classe 115
+                        </span>
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        8 Nov 2023
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        20%
+                    </div>
+                    <div class="col mt-1 mt-md-2">
+                        <span style="background-color: var(--color-done);" class="rounded px-1 text-light">Done</span>
+                    </div>
+                    <div class="col ">
+                        <i class="fa-solid fa-pencil border rounded p-1 m-1"></i>
+                        <i class="fa-solid fa-trash border rounded p-1 m-1"></i>
+                    </div>
+                </div>
+                <div class="row border-top border-bottom">
+                    <div class="col d-flex align-items-center gap-2 col-6 col-md-4">
+                        <img src="./assets/img/class-avatar.jpg" style="width: 30px;" class="p-1" alt="">
+                        <span class="d-block">
+                            Classe 115
+                        </span>
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        8 Nov 2023
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        20%
+                    </div>
+                    <div class="col mt-1 mt-md-2">
+                        <span style="background-color: var(--color-done);" class="rounded px-1 text-light">Done</span>
+                    </div>
+                    <div class="col ">
+                        <i class="fa-solid fa-pencil border rounded p-1 m-1"></i>
+                        <i class="fa-solid fa-trash border rounded p-1 m-1"></i>
+                    </div>
+                </div>
+                <div class="row border-top border-bottom">
+                    <div class="col d-flex align-items-center gap-2 col-6 col-md-4">
+                        <img src="./assets/img/class-avatar.jpg" style="width: 30px;" class="p-1" alt="">
+                        <span class="d-block">
+                            Classe 115
+                        </span>
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        8 Nov 2023
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        20%
+                    </div>
+                    <div class="col mt-1 mt-md-2">
+                        <span style="background-color: var(--color-process);" class="rounded px-1 text-light">Process</span>
+                    </div>
+                    <div class="col ">
+                        <i class="fa-solid fa-pencil border rounded p-1 m-1"></i>
+                        <i class="fa-solid fa-trash border rounded p-1 m-1"></i>
+                    </div>
+                </div>
+                <div class="row border-top border-bottom">
+                    <div class="col d-flex align-items-center gap-2 col-6 col-md-4">
+                        <img src="./assets/img/class-avatar.jpg" style="width: 30px;" class="p-1" alt="">
+                        <span class="d-block">
+                            Classe 115
+                        </span>
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        8 Nov 2023
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        20%
+                    </div>
+                    <div class="col mt-1 mt-md-2">
+                        <span style="background-color: var(--color-done);" class="rounded px-1 text-light">Done</span>
+                    </div>
+                    <div class="col ">
+                        <i class="fa-solid fa-pencil border rounded p-1 m-1"></i>
+                        <i class="fa-solid fa-trash border rounded p-1 m-1"></i>
+                    </div>
+                </div>
+                <div class="row border-top border-bottom">
+                    <div class="col d-flex align-items-center gap-2 col-6 col-md-4">
+                        <img src="./assets/img/class-avatar.jpg" style="width: 30px;" class="p-1" alt="">
+                        <span class="d-block">
+                            Classe 115
+                        </span>
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        8 Nov 2023
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        20%
+                    </div>
+                    <div class="col mt-1 mt-md-2">
+                        <span style="background-color: var(--color-failed);" class="rounded px-1 text-light">Failed</span>
+                    </div>
+                    <div class="col ">
+                        <i class="fa-solid fa-pencil border rounded p-1 m-1"></i>
+                        <i class="fa-solid fa-trash border rounded p-1 m-1"></i>
+                    </div>
+                </div>
+                <div class="row border-top border-bottom">
+                    <div class="col d-flex align-items-center gap-2 col-6 col-md-4">
+                        <img src="./assets/img/class-avatar.jpg" style="width: 30px;" class="p-1" alt="">
+                        <span class="d-block">
+                            Classe 115
+                        </span>
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        8 Nov 2023
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        20%
+                    </div>
+                    <div class="col mt-1 mt-md-2">
+                        <span style="background-color: var(--color-process);" class="rounded px-1 text-light">Process</span>
+                    </div>
+                    <div class="col ">
+                        <i class="fa-solid fa-pencil border rounded p-1 m-1"></i>
+                        <i class="fa-solid fa-trash border rounded p-1 m-1"></i>
+                    </div>
+                </div>
+                <div class="row border-top border-bottom">
+                    <div class="col d-flex align-items-center gap-2 col-6 col-md-4">
+                        <img src="./assets/img/class-avatar.jpg" style="width: 30px;" class="p-1" alt="">
+                        <span class="d-block">
+                            Classe 115
+                        </span>
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        8 Nov 2023
+                    </div>
+                    <div class="col d-none d-md-block mt-md-2">
+                        20%
+                    </div>
+                    <div class="col mt-1 mt-md-2">
+                        <span style="background-color: var(--color-done);" class="rounded px-1 text-light">Done</span>
+                    </div>
+                    <div class="col ">
+                        <i class="fa-solid fa-pencil border rounded p-1 m-1"></i>
+                        <i class="fa-solid fa-trash border rounded p-1 m-1"></i>
                     </div>
                 </div>
             </div>
+            
 
         </div>
     </main>
